--- a/app/src/main/res/layout/login_create_page.xml
+++ b/app/src/main/res/layout/login_create_page.xml
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/passwordTxt"
         android:layout_below="@+id/passwordRegister"
-        android:textSize="12sp"
+        android:textSize="@dimen/fontsize_12sp"
         android:visibility="gone"
         android:textColor="@color/text_light_gray"
         android:text="@string/create_acccount_pw_rules" />
@@ -63,7 +63,7 @@
         android:layout_height="wrap_content"
         android:text="@string/show"
         android:id="@+id/passwordLbl"
-        android:textSize="16sp"
+        android:textSize="@dimen/fontsize_16sp"
         android:clickable="true"
         android:textColor="@color/text_blue"
         android:layout_alignBottom="@+id/passwordRegister"
