--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -87,7 +87,7 @@
         android:paddingLeft="16dp"
         android:visibility="invisible"
         android:gravity="left|center_vertical"
-        android:textSize="16sp"
+        android:textSize="@dimen/fontsize_16sp"
         android:textColor="@color/text_white"
         android:background="@color/background_dark_gray" >
     </TextView>
