--- a/app/src/main/res/layout/rewards_ink_recycling.xml
+++ b/app/src/main/res/layout/rewards_ink_recycling.xml
@@ -28,13 +28,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingRight="6dp"
-                android:textSize="30sp"
+                android:textSize="@dimen/fontsize_30sp"
                 android:textColor="@color/text_gray"/>
             <TextView
                 android:id="@+id/cartridges_recycled_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
+                android:textSize="@dimen/fontsize_16sp"
                 android:textColor="@color/text_black"/>
         </LinearLayout>
 
@@ -43,7 +43,7 @@
             android:id="@+id/cartridges_limit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:textSize="@dimen/fontsize_16sp"
             android:textColor="@color/text_gray"/>
 
         <!--ink cartridges earned-->
@@ -58,12 +58,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingRight="6dp"
-                android:textSize="30sp"
+                android:textSize="@dimen/fontsize_30sp"
                 android:textColor="@color/text_gray"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
+                android:textSize="@dimen/fontsize_16sp"
                 android:textColor="@color/text_black"
                 android:text="@string/rewards_earned"/>
         </LinearLayout>
@@ -73,7 +73,7 @@
             android:id="@+id/ink_rewards_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:textSize="@dimen/fontsize_16sp"
             android:textColor="@color/text_gray"/>
 
     </LinearLayout>
