--- a/app/src/main/res/layout/cart_item_group.xml
+++ b/app/src/main/res/layout/cart_item_group.xml
@@ -32,7 +32,7 @@
             android:gravity="center_vertical"
             android:paddingLeft="16dp"
             android:textColor="@color/text_gray"
-            android:textSize="12sp"/>
+            android:textSize="@dimen/fontsize_12sp"/>
         <TextView
             android:id="@+id/cartitem_shipping_estimate_itemqty"
             android:layout_width="wrap_content"
@@ -41,7 +41,7 @@
             android:gravity="center_vertical"
             android:paddingRight="16dp"
             android:textColor="@color/text_gray"
-            android:textSize="12sp"/>
+            android:textSize="@dimen/fontsize_12sp"/>
         <!--horizontal rule-->
         <View
             android:id="@+id/horizontal_rule"
