--- a/app/src/main/res/layout/checkout_fragment.xml
+++ b/app/src/main/res/layout/checkout_fragment.xml
@@ -137,7 +137,7 @@
                 android:layout_width="wrap_content"
                 android:layout_gravity="left|center_vertical"
                 android:text="@string/submit_order"
-                android:textSize="14sp"
+                android:textSize="@dimen/fontsize_14sp"
                 android:textColor="@color/text_white"
                 />
             <TextView
@@ -145,7 +145,7 @@
                 style="@style/CheckoutFooter"
                 android:layout_width="wrap_content"
                 android:layout_gravity="right|center_vertical"
-                android:textSize="14sp"
+                android:textSize="@dimen/fontsize_14sp"
                 android:textColor="@color/text_white"
                 />
 
@@ -166,7 +166,7 @@
                 <!--android:layout_alignParentLeft="true"-->
                 <!--android:layout_centerVertical="true"-->
                 <!--android:text="@string/submit_order"-->
-                <!--android:textSize="14sp"-->
+                <!--android:textSize="@dimen/fontsize_14sp"-->
                 <!--android:textColor="@color/text_white"-->
                 <!--/>-->
             <!--<TextView-->
@@ -175,7 +175,7 @@
                 <!--android:layout_width="wrap_content"-->
                 <!--android:layout_alignParentRight="true"-->
                 <!--android:layout_centerVertical="true"-->
-                <!--android:textSize="14sp"-->
+                <!--android:textSize="@dimen/fontsize_14sp"-->
                 <!--android:textColor="@color/text_white"-->
                 <!--/>-->
         <!--</RelativeLayout>-->
