--- a/app/src/main/res/layout/checkout_guest_entry.xml
+++ b/app/src/main/res/layout/checkout_guest_entry.xml
@@ -38,7 +38,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
+            android:textSize="@dimen/fontsize_18sp"
             android:layout_marginRight="10dp"
             android:text="@string/use_as_billing_addr"/>
         <Switch
