--- a/app/src/main/res/layout/confirmation_create_account.xml
+++ b/app/src/main/res/layout/confirmation_create_account.xml
@@ -34,7 +34,7 @@
             android:inputType="textEmailAddress"
             android:imeOptions="actionNext"
             android:hint="@string/email"
-            android:textSize="16sp"
+            android:textSize="@dimen/fontsize_16sp"
             android:textColor="@color/text_nearly_black"
             />
 
@@ -54,7 +54,7 @@
             android:maxLength="12"
             android:layout_alignParentLeft="true"
             android:layout_below="@id/password_label"
-            android:textSize="16sp"
+            android:textSize="@dimen/fontsize_16sp"
             android:inputType="textPassword"
             android:imeOptions="actionDone"
             android:hint="@string/password"
@@ -104,7 +104,7 @@
                 android:paddingLeft="24dp"
                 android:paddingRight="24dp"
                 android:text="@string/create_account"
-                android:textSize="14sp"
+                android:textSize="@dimen/fontsize_14sp"
                 android:textColor="@color/text_white"
                 />
         </android.support.v7.widget.CardView>
@@ -118,7 +118,7 @@
             android:layout_width="wrap_content"
             android:layout_marginRight="32dp"
             android:gravity="center"
-            android:textSize="14sp"
+            android:textSize="@dimen/fontsize_14sp"
             android:textColor="@color/text_red"
             android:text="@string/cancel"/>
 
