--- a/app/src/main/res/layout/coupon_item_no_rewards_msg.xml
+++ b/app/src/main/res/layout/coupon_item_no_rewards_msg.xml
@@ -6,7 +6,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textSize="14sp"
+    android:textSize="@dimen/fontsize_14sp"
     android:padding="0dp"
     android:text="@string/no_redeemable_rewards"
 />
