--- a/app/src/main/res/layout/coupon_item_redeemable.xml
+++ b/app/src/main/res/layout/coupon_item_redeemable.xml
@@ -37,7 +37,7 @@
         android:layout_gravity="center_vertical"
         android:background="@color/background_red_submission"
         android:text="@string/add"
-        android:textSize="14sp"
+        android:textSize="@dimen/fontsize_14sp"
         android:textColor="@color/text_white"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
@@ -53,7 +53,7 @@
         android:layout_gravity="center_vertical"
         android:background="@color/background_extra_light_gray"
         android:text="@string/remove"
-        android:textSize="14sp"
+        android:textSize="@dimen/fontsize_14sp"
         android:textColor="@color/text_black"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
