--- a/app/src/main/res/layout/personal_feed.xml
+++ b/app/src/main/res/layout/personal_feed.xml
@@ -68,7 +68,7 @@
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center"
-                            android:textSize="20sp"
+                            android:textSize="@dimen/fontsize_20sp"
                             android:text="@string/loading"
                             android:padding="5dp"/>
                         <ProgressBar
@@ -80,7 +80,7 @@
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:textSize="20sp"
+                        android:textSize="@dimen/fontsize_20sp"
                         android:text="@string/empty"
                         android:padding="5dp"/>
 
@@ -142,7 +142,7 @@
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center"
-                            android:textSize="20sp"
+                            android:textSize="@dimen/fontsize_20sp"
                             android:text="@string/loading"
                             android:padding="5dp"/>
                         <ProgressBar
@@ -154,7 +154,7 @@
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:textSize="20sp"
+                        android:textSize="@dimen/fontsize_20sp"
                         android:text="@string/empty"
                         android:padding="5dp"/>
                 </com.staples.mobile.cfa.widget.DataWrapper>
@@ -203,7 +203,7 @@
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content"
                             android:gravity="center"
-                            android:textSize="20sp"
+                            android:textSize="@dimen/fontsize_20sp"
                             android:text="@string/loading"
                             android:padding="5dp"/>
                         <ProgressBar
@@ -215,7 +215,7 @@
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:gravity="center"
-                        android:textSize="20sp"
+                        android:textSize="@dimen/fontsize_20sp"
                         android:text="@string/empty"
                         android:padding="5dp"/>
                 </com.staples.mobile.cfa.widget.DataWrapper>
