--- a/app/src/main/res/layout/rewards_linking.xml
+++ b/app/src/main/res/layout/rewards_linking.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:textSize="20sp"
+        android:textSize="@dimen/fontsize_20sp"
         android:text="@string/link_rewards_account"
         />
     <EditText
@@ -46,7 +46,7 @@
         android:layout_below="@id/rewards_phone_number"
         android:layout_alignParentRight="true"
         android:text="@string/link_account"
-        android:textSize="16sp"
+        android:textSize="@dimen/fontsize_16sp"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
         android:paddingLeft="8dp"
