--- a/app/src/main/res/layout/rewards_list.xml
+++ b/app/src/main/res/layout/rewards_list.xml
@@ -22,13 +22,13 @@
         android:layout_height="wrap_content"
         android:paddingTop="10dp"
         android:visibility="gone"
-        android:textSize="16sp"
+        android:textSize="@dimen/fontsize_16sp"
         android:text="@string/no_redeemable_rewards"/>
 
     <!--<TextView-->
     <!--android:layout_width="wrap_content"-->
     <!--android:layout_height="wrap_content"-->
-    <!--android:textSize="20sp"-->
+    <!--android:textSize="@dimen/fontsize_20sp"-->
     <!--android:text="@string/rewards_addtocart_confirmation"/>-->
 
 </LinearLayout>
