--- a/app/src/main/res/layout/rewards_summary.xml
+++ b/app/src/main/res/layout/rewards_summary.xml
@@ -24,14 +24,14 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
+                android:textSize="@dimen/fontsize_16sp"
                 android:textColor="@color/text_black"
                 android:text="@string/rewards_ytd_savings"/>
             <TextView
                 android:id="@+id/total_ytd_savings"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="30sp"
+                android:textSize="@dimen/fontsize_30sp"
                 android:textColor="@color/text_gray"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
@@ -51,14 +51,14 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
+                android:textSize="@dimen/fontsize_16sp"
                 android:textColor="@color/text_black"
                 android:text="@string/rewards_ytd_spend"/>
             <TextView
                 android:id="@+id/ytd_spend_goal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="30sp"
+                android:textSize="@dimen/fontsize_30sp"
                 android:textColor="@color/text_gray"/>
             <ProgressBar
                 android:id="@+id/ytd_progress"
@@ -72,7 +72,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingTop="4dp"
-                android:textSize="16sp"
+                android:textSize="@dimen/fontsize_16sp"
                 android:textColor="@color/text_gray"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
