--- a/app/src/main/res/layout/sku_summary.xml
+++ b/app/src/main/res/layout/sku_summary.xml
@@ -79,7 +79,7 @@
                         android:paddingBottom="2dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginBottom="5dp"
-                        android:textSize="15sp"
+                        android:textSize="@dimen/fontsize_15sp"
                         android:gravity="center_vertical|left"
                         android:text="@string/overweight_warming"/>
                 </LinearLayout>
@@ -113,7 +113,7 @@
                         android:paddingBottom="2dp"
                         android:layout_marginTop="5dp"
                         android:layout_marginBottom="5dp"
-                        android:textSize="15sp"
+                        android:textSize="@dimen/fontsize_15sp"
                         android:gravity="center_vertical|left"
                         android:text="@string/add_on_warming"/>
                 </LinearLayout>
@@ -245,7 +245,7 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:gravity="center"
-        android:textSize="20sp"
+        android:textSize="@dimen/fontsize_20sp"
         android:text="@string/empty"/>
 
     <!-- Detail page -->
@@ -278,7 +278,7 @@
         android:orientation="vertical">
         <TextView
             android:id="@+id/select_sku"
-            android:textSize="16sp"
+            android:textSize="@dimen/fontsize_16sp"
             android:paddingRight="10dp"
             android:text="@string/sku_set_message"
             android:layout_width="wrap_content"
@@ -313,7 +313,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:visibility="gone"
-                android:textSize="20sp"
+                android:textSize="@dimen/fontsize_20sp"
                 android:text="@string/add_to_cart"/>
             <TextView
                 android:id="@+id/footer_msg"
@@ -321,7 +321,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:textColor="@color/text_nearly_black"
-                android:textSize="16sp"
+                android:textSize="@dimen/fontsize_16sp"
                 android:visibility="gone"
                 />
         </LinearLayout>
