--- a/app/src/main/res/layout/tobedone.xml
+++ b/app/src/main/res/layout/tobedone.xml
@@ -9,11 +9,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:textSize="20sp"/>
+        android:textSize="@dimen/fontsize_20sp"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:textSize="20sp"
+        android:textSize="@dimen/fontsize_20sp"
         android:text="@string/tobedone_title"/>
 </com.staples.mobile.cfa.widget.AnimatorLayout>
