--- a/app/src/main/res/layout/weekly_ad_categories_item.xml
+++ b/app/src/main/res/layout/weekly_ad_categories_item.xml
@@ -23,13 +23,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:textSize="16sp"
+                android:textSize="@dimen/fontsize_16sp"
                 android:textColor="@color/text_black"/>
             <TextView
                 android:id="@+id/weekly_ad_category_deals_count_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
+                android:textSize="@dimen/fontsize_16sp"
                 android:textColor="@color/text_red"/>
         </LinearLayout>
 
