--- a/app/src/main/res/layout/weekly_ad_category.xml
+++ b/app/src/main/res/layout/weekly_ad_category.xml
@@ -37,7 +37,7 @@
                 android:gravity="right"
                 android:textColor="@color/text_white"
                 android:textStyle="bold"
-                android:textSize="20sp"
+                android:textSize="@dimen/fontsize_20sp"
                 />
 
             <!-- "change store" link: including a little padding to increase touch area-->
@@ -48,7 +48,7 @@
                 android:paddingTop="4dp"
                 android:paddingBottom="4dp"
                 android:textColor="@color/text_white"
-                android:textSize="16sp"
+                android:textSize="@dimen/fontsize_16sp"
                 android:text="@string/change_store"
             />
             <TextView
@@ -57,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:paddingTop="8dp"
                 android:textColor="@color/text_white"
-                android:textSize="20sp"
+                android:textSize="@dimen/fontsize_20sp"
                 />
         </LinearLayout>
     </FrameLayout>
