--- a/app/src/main/res/layout/weekly_ad_in_store.xml
+++ b/app/src/main/res/layout/weekly_ad_in_store.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/inStoreTV"
         android:paddingTop="10dp"
-        android:textSize="14sp"
+        android:textSize="@dimen/fontsize_14sp"
         android:textColor="@color/text_red"
         android:text="@string/avail_retailonly"
         android:gravity="center"
@@ -31,7 +31,7 @@
         android:id="@+id/weekly_ad_title_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="14sp"
+        android:textSize="@dimen/fontsize_14sp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="10dp"
@@ -46,7 +46,7 @@
             android:id="@+id/weekly_ad_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
+            android:textSize="@dimen/fontsize_12sp"
             android:paddingLeft="10dp"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
@@ -56,7 +56,7 @@
             android:id="@+id/weekly_ad_price_extension"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="10sp"
+            android:textSize="@dimen/fontsize_10sp"
             android:paddingLeft="3dp"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
