--- a/app/src/main/res/layout/weekly_ad_list_item.xml
+++ b/app/src/main/res/layout/weekly_ad_list_item.xml
@@ -20,7 +20,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/inStoreTV"
                 android:paddingTop="10dp"
-                android:textSize="14sp"
+                android:textSize="@dimen/fontsize_14sp"
                 android:textColor="@color/text_red"
                 android:gravity="center"
                 android:visibility="gone"
@@ -39,7 +39,7 @@
                 android:id="@+id/weekly_ad_list_title_text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="14sp"
+                android:textSize="@dimen/fontsize_14sp"
                 android:paddingLeft="10dip"
                 android:paddingRight="10dip"
                 android:paddingTop="10dp"
@@ -54,7 +54,7 @@
                     android:id="@+id/weekly_ad_list_price"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="12sp"
+                    android:textSize="@dimen/fontsize_12sp"
                     android:paddingLeft="10dp"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
@@ -64,7 +64,7 @@
                     android:id="@+id/weekly_ad_price_extension"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textSize="10sp"
+                    android:textSize="@dimen/fontsize_10sp"
                     android:paddingLeft="3dp"
                     android:paddingTop="10dp"
                     android:paddingBottom="10dp"
